fixed modal background for overflowing modals on mobile/small tablets

--- a/src/css/bootcards-android.css
+++ b/src/css/bootcards-android.css
@@ -173,7 +173,7 @@ a,
 
 @media (max-width:767px) {
 	.modal-dialog {
-		height: 100%;
+		min-height: 100%;
 	}
 	.modal-dialog {
 		margin: 0;
