--- a/src/css/bootcards-ios.css
+++ b/src/css/bootcards-ios.css
@@ -250,7 +250,7 @@ html, body {
 
 @media (max-width:767px) {
 	.modal-dialog {
-		height: 100%;
+		min-height: 100%;
 	}
 	.modal-dialog {
 		margin: 0;
